test/spec_vectors/unreached-invalid/fail/module_91.wat
(module (func $type-block-value-nested-br-num-vs-void (block (i32.const 3) (block (br 1)))))